unpackaged/main/default/objects/sked_Location_Account__c/sked_Location_Account__c.object-meta.xml
<CustomObject>
    <label>Location Account</label>
    <nameField>
        <displayFormat>LA-{0000}</displayFormat>
        <label>Location Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Location Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>