unpackaged/main/default/objects/sked_Location_Account__c/fields/Automation_Suitability__c.field-meta.xml
<CustomField>
    <fullName>Automation_Suitability__c</fullName>
    <formula>TEXT(sked_Location__r.sked_Automation_Suitability__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Automation Suitability</label>
    <type>Text</type>
</CustomField>