unpackaged/main/default/objects/sked_Location_Account__c/fields/Is_Address_Valid__c.field-meta.xml
<CustomField>
    <fullName>Is_Address_Valid__c</fullName>
    <description>Verifies to see none of address fields are blank</description>
    <formula>ISBLANK(sked_Location__r.sked_Address_1__c) == false 
&amp;&amp; ISBLANK(sked_Location__r.sked_City__c) == false
 &amp;&amp; ISBLANK(sked_Location__r.sked_State__c) == false
 &amp;&amp; ISBLANK(sked_Location__r.sked_Zip_Code__c) == false</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Address Valid</label>
    <type>Checkbox</type>
</CustomField>