unpackaged/main/default/objects/sked_Location_Account__c/fields/Site_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Site_End_Date__c</fullName>
    <description>Site End Date</description>
    <formula>sked_Location__r.sked_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Site End Date</label>
    <type>Date</type>
</CustomField>