unpackaged/main/default/objects/sked_Location_Account__c/fields/sked_Account__c.field-meta.xml
<CustomField>
    <fullName>sked_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Related Sites</relationshipLabel>
    <relationshipName>sked_Location_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>