unpackaged/main/default/objects/sked_Location_Account__c/fields/sked_Location__c.field-meta.xml
<CustomField>
    <fullName>sked_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>sked__Location__c</referenceTo>
    <relationshipLabel>Related Accounts</relationshipLabel>
    <relationshipName>sked_Location_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>